--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,10 +1,10 @@
 @import "tailwindcss";
-
+@custom-variant dark (&:where(.dark, .dark *));
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   color: rgba(255, 255, 255, 0.87);
   background-color: rgb(204 251 241);
   transition: background-color 0.5s, color 0.5s;
