--- a/web/src/index.css
+++ b/web/src/index.css
@@ -10,6 +10,10 @@
   transition: background-color 0.5s, color 0.5s;
 }
 
+.dark:root {
+  background-color: #242424;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
